--- a/android-util/build.gradle
+++ b/android-util/build.gradle
@@ -1,4 +1,28 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+ext {
+    bintrayRepo = 'android'
+    bintrayName = 'android-util'
+
+    publishedGroupId = 'com.pointinside.android'
+    libraryName = 'android'
+    artifact = 'android-util'
+
+    libraryDescription = 'This library includes all the dependencies for pimapslib.'
+
+    siteUrl = 'https://github.com/PointInside/pi-android-util'
+    gitUrl = 'https://github.com/PointInside/pi-android-util.git'
+
+    libraryVersion = '0.1.0'
+
+    developerId = 'pointinside'
+    developerName = 'Point Inside'
+    developerEmail = 'mobile+developers@pointinside.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
 
 android {
     compileSdkVersion 25
@@ -37,3 +61,6 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 }
+
+apply from: 'https://raw.githubusercontent.com/PointInside/pi-android-util/master/install.gradle'
+apply from: 'https://raw.githubusercontent.com/PointInside/pi-android-util/master/bintray.gradle'
