--- a/appcompat-v1/src/main/AndroidManifest.xml
+++ b/appcompat-v1/src/main/AndroidManifest.xml
@@ -11,14 +11,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.pointinside.android.util">
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
+    <application></application>
 
-</resources>
+</manifest>
