Add bintray properties

--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,7 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+def getUserHomeDir() {
+    return System.getProperty("user.home").toString()
+}
