--- a/bintray.gradle
+++ b/bintray.gradle
@@ -31,7 +31,7 @@ artifacts {
 
 // Bintray
 Properties properties = new Properties()
-def bintrayPropertiesFile = rootProject.file(project.rootProject.getUserHomeDir() + "/bintray.properties")
+def bintrayPropertiesFile = project.rootProject.file(project.rootProject.getUserHomeDir() + "/bintray.properties")
 properties.load(bintrayPropertiesFile.newDataInputStream())
 
 bintray {
@@ -53,7 +53,7 @@ bintray {
             desc = libraryDescription
             gpg {
                 sign = false //Determines whether to GPG sign the files. The default is false
-                passphrase = properties.getProperty("bintray.gpg.password")
+                passphrase = properties.getProperty("bintray.gpg.passphrase")
                 //Optional. The passphrase for GPG signing'
             }
         }
