--- a/bintray.gradle
+++ b/bintray.gradle
@@ -52,7 +52,7 @@ bintray {
         version {
             desc = libraryDescription
             gpg {
-                sign = false //Determines whether to GPG sign the files. The default is false
+                sign = true //Determines whether to GPG sign the files. The default is false
                 passphrase = properties.getProperty("bintray.gpg.passphrase")
                 //Optional. The passphrase for GPG signing'
             }
