Use api flag for dependencies

--- a/pi-dependencies/build.gradle
+++ b/pi-dependencies/build.gradle
@@ -48,15 +48,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation deps.gson
-    implementation deps.support.app_compat
-    implementation deps.support.v4
-    implementation deps.retrofit.runtime
-    implementation deps.retrofit.gson
-    implementation deps.play.ads
-    implementation deps.logging_intercepter
-    implementation deps.support.annotations
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api deps.gson
+    api deps.support.app_compat
+    api deps.support.v4
+    api deps.retrofit.runtime
+    api deps.retrofit.gson
+    api deps.play.ads
+    api deps.logging_intercepter
+    api deps.support.annotations
     androidTestImplementation(deps.espresso.core, {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
